<resources>
    <string name="app_name">palacio</string>
    <string name="Save">Save</string>
    <string name="Send">Send</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="User">Connected</string>
    <string name="Update">Update</string>
    <string name="Registration">Registration</string>
    <string name="Type_email">Type Email</string>
    <string name="Type_enemy">Type Enemy Email</string>
    <string name="Type_Password">Type Password</string>
    <string name="Type_Phone">Type Phone</string>
    <string name="Type_F">Type First name</string>
    <string name="Type_L">Type Last name</string>
    <string name="Type_BD">Type Birthday</string>
    <string name="Choose_Pic">Choose Pic</string>
    <string name="Type_A">Type Your address</string>
    <string name="Type_W">Type your weight</string>
    <string name="Type_H">Type your height</string>
    <string name="Type_C">Type Your City</string>
    <string name="Palace">Palácio da Ilha</string>
    <string name="Logout">Logout</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="gender">Gender:</string>
    <string name="phone">Phone:</string>
    <string name="pic">Picture:</string>
    <string name="chg">Change Picture</string>
    <string name="bd">Birthday:</string>
    <string name="add">Address:</string>
    <string name="wei">Weight:</string>
    <string name="hei">Height:</string>
    <string name="City">City:</string>
    <string name="fname">First name:</string>
    <string name="lname">Last name:</string>
    <string name="slash">/</string>
    <string name="update">Update</string>
    <string name="Change">Change</string>
    <string name="inputbd">Input your birthday</string>
    <string name="back">Back</string>
    <string name="buy">Go Buy</string>
    <string name="ADMIN">ADMIN</string>
    <string name="addS">add</string>
    <string name="addproduct">add product</string>
    <string name="addamo">add amount to existing products</string>
    <string name="proname">Product Name</string>
    <string name="protype">Product Type:</string>
    <string name="prodes">Product Description</string>
    <string name="propri">Product Price</string>
    <string name="proamount">Product Amount</string>
    <string name="addProductImage">add Product Image</string>
    <string name="Updateprods">Update Existing Products</string>
    <string name="matt">Mattresses</string>
    <string name="chair">Chairs</string>
    <string name="sofa">Sofas</string>
    <string name="table">Tables</string>
    <string name="txtprotype">Product Catagories</string>
    <string name="all">All</string>
    <string name="allpro">All Products</string>
    <string name="recommpro">Recommended Products</string>
    <string name="buypro">Buy Product</string>
    <string name="empty"></string>
    <string name="cart">Cart</string>
    <string name="orderdate">This order was made on: </string>
    <string name="orderitems">Amount of items: </string>
    <string name="sendorders">Send Orders </string>
    <string name="orderdets">Order Details </string>
    <string name="isCharge">Is the phone charging? </string>
    <string name="viewuser">View all users </string>
    <string name="allusers">All users </string>
    <string name="info">Info </string>
    <string name="orderhis">Order History </string>
    <string name="orderdetshis">Order Details History </string>
    <string name="makedelivery">Make Delivery </string>
    <string name="purrr">Purchase </string>
    <string name="alldeli">All deliveries </string>
    <string name="delidate">This delivery will be delivered to you on: </string>
    <string name="delistats">Status: </string>
    <string name="recommended">recommended </string>
    <string name="checkangle">Press the button to measure the angle of how much your back bends </string>
    <string name="zero"> Zero </string>
    <string name="A"> A </string>
    <string name="B"> B </string>
    <string name="C"> C </string>
    <string name="anglerange"> Select angle type: </string>
    <string name="weightrange"> Select weight type: </string>
    <string name="heightrange"> Select height type: </string>
    <string name="ahw"> Angle, height and weight types </string>
    <string name="con"> Continue </string>
    <string name="foryou"> For you </string>
    <string name="candeli"> Cancel Delivery </string>
    <string name="zamount"> 0 amount </string>
    <string name="allz"> All 0 amount products </string>
    <string name="proprice"> Product price: </string>

</resources>

