<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/redwhitepretty"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_horizontal"
        android:text="@string/Login"
        android:textColor="#000"
        android:textSize="30dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edite"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_horizontal"
        android:background="@drawable/redwhite"
        android:hint="@string/Type_email"
        android:inputType="textPersonName"

        android:textColor="#000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_horizontal"
        android:background="@drawable/redwhite"
        android:layout_marginLeft="50dp"
        android:hint="@string/Type_Password"
        android:inputType="textPersonName"

        android:textColor="#000"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btns"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@drawable/roundbtn"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/Send"
            android:textColor="#000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnr"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/Register"
            android:background="@drawable/roundbtn"
            android:textColor="#000"
            android:textStyle="bold" />



    </LinearLayout>
</LinearLayout>