<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/redwhitepretty"
    tools:context=".admin">

    <Button
        android:id="@+id/adddd"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@drawable/roundbtn"
        android:text="@string/addS"
        android:fontFamily="sans-serif-smallcaps"/>
    <Button
        android:id="@+id/viewuser"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/roundbtn"
        android:text="@string/viewuser"
        android:fontFamily="sans-serif-smallcaps"/>
    <Button
        android:id="@+id/btnbacktomainhubfromadmin"
        android:layout_marginTop="100dp"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/marzipan"
        android:drawableLeft="@drawable/ic_arrow_back_black_24dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/back" />

</LinearLayout>