<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/redwhitepretty"
    tools:context=".shop">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="40sp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnbacktomainhubfromcart"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/marzipan"
            android:drawableLeft="@drawable/ic_arrow_back_black_24dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/cart"
            android:textColor="#000"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btntomakedelivery"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/redwhitegradient"
            android:drawableLeft="@drawable/cart"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/makedelivery" />

        <Button
            android:id="@+id/btncanceldelivery"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/redwhitegradient"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/candeli" />
    </LinearLayout>

    <ListView
        android:id="@+id/itemsoncurorder"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>