<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/alhsonredwhite"
    tools:context=".MainActivity">


    <include layout="@layout/videobackground" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-smallcaps"
        android:background="@drawable/roundbtn"
        android:text="@string/Palace"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-smallcaps"
        android:background="@drawable/roundbtn"
        android:text="@string/Login" />

    <Button
        android:id="@+id/btnreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="258dp"
        android:fontFamily="sans-serif-smallcaps"
        android:background="@drawable/roundbtn"
        android:text="@string/Register" />

</RelativeLayout>